--- a/TrustKitDemo/TrustKitDemo/Base.lproj/Main.storyboard
+++ b/TrustKitDemo/TrustKitDemo/Base.lproj/Main.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,49 +19,55 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUD-nR-oCW">
-                                <rect key="frame" x="66" y="276.5" width="243" height="35"/>
-                                <color key="backgroundColor" red="0.10980392160000001" green="0.2784313725" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="kQR-v2-MNc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Test Invalid Pinning"/>
-                                <connections>
-                                    <action selector="testInvalidPinning:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BpP-OW-o3x"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v4z-tv-wOm">
-                                <rect key="frame" x="66" y="356.5" width="243" height="35"/>
-                                <color key="backgroundColor" red="0.10980392160000001" green="0.2784313725" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="hZ3-Kp-Tbr"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Test Valid Pinning"/>
-                                <connections>
-                                    <action selector="testValidPinning:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ARn-Nr-6H3"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7DP-6J-iyZ">
+                                <rect key="frame" x="51" y="195" width="218" height="90"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUD-nR-oCW">
+                                        <rect key="frame" x="0.0" y="0.0" width="218" height="35"/>
+                                        <color key="backgroundColor" red="0.10980392160000001" green="0.2784313725" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="kQR-v2-MNc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="Test Invalid Pinning"/>
+                                        <connections>
+                                            <action selector="testInvalidPinning:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BpP-OW-o3x"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v4z-tv-wOm">
+                                        <rect key="frame" x="0.0" y="55" width="218" height="35"/>
+                                        <color key="backgroundColor" red="0.10980392160000001" green="0.2784313725" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="35" id="hZ3-Kp-Tbr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="Test Valid Pinning"/>
+                                        <connections>
+                                            <action selector="testValidPinning:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ARn-Nr-6H3"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="iox-tH-Uq9">
+                                <rect key="frame" x="150" y="305" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="v4z-tv-wOm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="Gjr-v8-0iD"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="v4z-tv-wOm" secondAttribute="trailing" constant="50" id="JMC-7Z-bd7"/>
-                            <constraint firstItem="fUD-nR-oCW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LpS-ga-Iaw"/>
-                            <constraint firstItem="fUD-nR-oCW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="Nme-7t-78D"/>
-                            <constraint firstItem="v4z-tv-wOm" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="40" id="QJQ-1o-u6o"/>
-                            <constraint firstItem="v4z-tv-wOm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bS8-8Q-5W2"/>
-                            <constraint firstItem="fUD-nR-oCW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-40" id="bgF-MR-dT5"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="fUD-nR-oCW" secondAttribute="trailing" constant="50" id="dRN-Bi-sZ0"/>
+                            <constraint firstItem="iox-tH-Uq9" firstAttribute="centerX" secondItem="7DP-6J-iyZ" secondAttribute="centerX" id="30W-wv-YoO"/>
+                            <constraint firstItem="7DP-6J-iyZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="88e-6B-0qD"/>
+                            <constraint firstItem="7DP-6J-iyZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FMP-i4-7fi"/>
+                            <constraint firstItem="iox-tH-Uq9" firstAttribute="top" secondItem="7DP-6J-iyZ" secondAttribute="bottom" constant="20" id="c4w-UF-GxZ"/>
+                            <constraint firstItem="7DP-6J-iyZ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:2.2" id="g44-bX-85L"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="iox-tH-Uq9" id="Ebh-Ps-5io"/>
                         <outlet property="invalidPinBtn" destination="fUD-nR-oCW" id="Epm-VC-3ty"/>
                         <outlet property="validPinBtn" destination="v4z-tv-wOm" id="bCG-Fk-VLt"/>
                     </connections>
